# lawvault

./: README.md  flashrank_rerank.py  package-lock.json
.flashrank_venv/: pyvenv.cfg
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src/components/: AIChatBox.tsx  LawDetailView.tsx  ResultsDisplay.tsx  SettingsModal.tsx
src/services/: api.ts
