[package]
name = "LawVault"
version = "0.2.6"
description = "Local Law Base"
authors = ["ByronLeeeee"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"


tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
lancedb = "0.22.3"
arrow-array = "56.0.0"
futures = "0.3"
chrono = "0.4.38"
regex = "1.10"
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.5.2"
